# oauth-axum

./: .gitignore  Cargo.toml  README.md  a.js
.github/: CODEOWNERS
examples/: .env  discord.rs  docker-compose.yml  facebook.rs  github.rs  github_db.rs  microsoft.rs  paypal.rs  spotify.rs  sql_auth_model.sql  twitter.rs
examples/axum_discord_memory/: Cargo.toml
examples/axum_discord_memory/src/: main.rs
examples/axum_github_memory/: Cargo.toml
examples/axum_github_memory/src/: main.rs
examples/axum_memory/: Cargo.toml
examples/axum_memory/src/: main.rs
examples/axum_twitter_memory/: Cargo.toml
examples/axum_twitter_memory/src/: main.rs
examples/utils/: memory_db_util.rs  mod.rs
src/: client.rs  error.rs  lib.rs  memory_db.rs  openid.rs
src/providers/: discord.rs  facebook.rs  github.rs  google.rs  microsoft.rs  mod.rs  spotify.rs  twitter.rs
src/providers/openid/: paypal.rs
