workspace = { members = [
    "examples/axum_github_memory",
    "examples/axum_discord_memory",
    "examples/axum_twitter_memory",
] }
[package]
name = "oauth-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
serde = "1.0.198"
axum = { version = "0.7.5", features = ["macros"] }

[[example]]
name = "axum_github_memory"
path = "examples/axum_github_memory/src/main.rs"
[[example]]
name = "axum_discord_memory"
path = "examples/axum_discord_memory/src/main.rs"
[[example]]
name = "axum_twitter_memory"
path = "examples/axum_twitter_memory/src/main.rs"
