[package]
name = "oauth-axum"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "OAuth2 authorization code flow with Axum"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
serde = "1.0.198"
axum = { version = "0.7.5", features = ["macros"] }
tokio-postgres = "0.7.10"

[[example]]
name = "github"

[[example]]
name = "github_db"

[[example]]
name = "discord"

[[example]]
name = "twitter"
