[package]
name = "axum_twitter_memory"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "axum_twitter_memory"
path = "examples/axum_twitter_memory/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.7.5"
# tokio = { version = "1.37.0", features = ["full"] }
